x updated: `LOAD()` added a callback function
x updated: components support `encoding="utf8"` attribute for `<file` tag (default: `base64`)
x updated: `EventEmitter2` supports a new argument `obj`, example: `U.EventEmitter2(obj)` or supports `.extend` method: `U.EventEmitter2.extend(proto)`

- fixed: schemas validation
- fixed: error handling in dynamic schemas
- fixed: CSS variables
- fixed: CSS variables with additional `!important` clause
- fixed: `controller.proxy()` with Gzip/Deflate compression
- fixed: HTTP status code with `204` in `REQUEST()`
- fixed: `cookies` in `WEBSOCKETCLIENT`
- fixed: `REQUEST()` with `json` flag and with `null` and `''` value
- fixed: rendering components in `layout`
- fixed: resources, there was a bug with reading of value from `default.resource`
- fixed: too many open files in `res.image()`
- fixed: too many open files in `res.filefs()`
- fixed: Schema `Boolean` parser
- fixed: renamed `F.stats.request.path` to `F.stats.request.patch`
- fixed: SMTP sender (a problem with auth mechanism with some mail servers)
- fixed: filter in `F.backup()`
- fixed: paths for stored directories in `F.backup()`
- fixed: uploading files
- fixed: `U.getExtension()` by @molda

x renamed: `*.routeScript` to `*.public_js`
x renamed: `*.routeStyle` to `*.public_css`
x renamed: `*.routeFont` to `*.public_font`
x renamed: `*.routeVideo` to `*.public_video`
x renamed: `*.routeImage` to `*.public_image`
x renamed: `*.routeDownload` to `*.public_download`
x renamed: `*.routeStatic` to `*.public`
x renamed: `controller.viewCompile()` to `controller.view_compile()`

x __removed: backward compatibility__ with older version of Node.js < 10
x removed: `F.hash()`, alternative `String.prototype.hash()`
x removed: `controller.hash()`, alternative `String.prototype.hash()`

- improved Schemas and error handling
- improved `res.filefs()` method for nonexistent files

======= 3.2.0

- added: `WORKER()` alias to `F.worker()`
- added: `WORKER2()` alias to `F.worker2()`